--- a/index.html
+++ b/index.html
@@ -60,56 +60,58 @@
         <!-- Features Section -->
         <section class="features">
             <div class="features-content">
-                <h3 class="section-title ">Features you will<br>Play Games
-                    Online Anywhere,
-                    Anytime!</h3>
-                <!-- <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even </p>
 
-                <div class="card">
-                    <h4>Dexktop & Mobile Version</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-                <div class="card">
-                    <h4>Dexktop & Mobile Version</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority
-                        have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div> -->
-                <!-- <div class="card">
-                    <h4>Dexktop & Mobile Version</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority
-                        have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-                <div class="card">
-                    <h4>Dexktop & Mobile Version</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority
-                        have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div> -->
+
+
+
                 <div class="feature-img"></div>
                 <img src="images/Rectangle 67.png" alt="">
                 <div class="ten-years-badge">
                     <img src="images/Rectangle 78.png" alt="">
-                    <!-- <h2>10+ years</h2>
-                    <p>Experience</p> -->
+
                 </div>
 
             </div>
-        </section> -->
+
+
+
+
+            <section class="teams-container">
+                <div class="teams-img-container">
+
+
+                </div>
+                <div class="teams-content">
+                    <h3 class="teams-title"><span class="text-purple">Play Games
+                            Online Anywhere,<br> </span>Anytime</h3>
+                    <p class="teams-description text-light-gray">PC. dad s phone, moms tablet, or your Chromebook,
+                        with Gamer you can play your favorite games online
+                        for free, any time, anywhere , on any device.</p>
+
+                </div>
+                </div>
+            </section>
+
+
+
+
+
+
+            <!-- <h2>10+ years</h2>
+                    <p>Experience</p> -->
+
+        </section>
         <!-- facts section -->
         <section class="facts">
-            <h3 class="section-title">Online Games Funny Videos</h3>
-            <p class="text-light-gray">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <h3 class="section-title">Online Games<span class="text-purple"> Funny Videos</span></h3>
+            <p class=" text-light-gray"> Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="facts-card-container">
                 <!-- .card*4>img+h2.card-stats+p.card-title.text-light-gray -->
 
                 <div class="card">
                     <img src="images/Rectangle 4.png" alt="">
-                    <p class="card-title text-light-gray">No Download. No Installs. Play games Instantly on Gamer.
+                    <p class="card-title text-light-gray">No Download. No Installs. Play games Instantly on
+                        Gamer.
                     </p>
                 </div>
                 <div class="card">
@@ -124,25 +126,47 @@
                 <div class="card">
                     <img src="images/Rectangle 6.png" alt="">
 
-                    <p class="card-title text-light-gray">Busted gaming on school laptop, but you are still lit.</p>
+                    <p class="card-title text-light-gray">Busted gaming on school laptop, but you are still lit.
+                    </p>
                 </div>
             </div>
         </section>
         <!-- sponsors section -->
         <section class="sponsors">
             <h3 class="section-title">Ours Sponsors</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
-                have suffered alteration.</p>
+            <p class="text-light-gray">Our Story Games Web Games Careers Support My Account</p>
             <div class="sponsors-img-container">
-                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/twitter.jpg"">
+                <img src=" images/facebook.jpg" alt="">
+                <img src="images/youtube.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+
+
+                <p class="text-light-gray">Terms and Conditions Privacy Policy Cookie Policy Privacy Settings</p>
+
+            </div>
+        </section>
+
+
+
+        <!-- <section class="sponsors">
+            <h3 class="section-title">Ours Sponsors</h3>
+            <p class="text-light-gray">Our Story Games Web Games Careers Support My Account</p>
+            <div class="sponsors-img-container">
+                <img src="images/" alt="">
                 <img src="images/sponsors/amazon.png" alt="">
                 <img src="images/sponsors/google.png" alt="">
                 <img src="images/sponsors/telerama.png" alt="">
                 <img src="images/sponsors/figma.png" alt="">
 
             </div>
-        </section>
+        </section> -->
     </main>
+
+
+
+
     <footer>
 
     </footer>
