--- a/index.html
+++ b/index.html
@@ -131,15 +131,51 @@
                 </div>
             </div>
         </section>
+
+
+        <section>
+            <section class="sponsors">
+
+                <div class="sponsors-img-container">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <img src="images/Rectangle 12.png" alt="">
+
+                    <img src="images/Rectangle 13.png" alt="">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <img src="images/Rectangle 15.png" alt=""><br>
+                    <img src="images/Rectangle 16.png" alt="">
+                    <img src="images/Rectangle 17.png" alt="">
+                    <img src="images/Rectangle 18.png" alt="">
+                    <img src="images/Rectangle 19.png" alt="">
+
+
+
+                    <p class="text-light-gray">Terms and Conditions Privacy Policy Cookie Policy Privacy Settings</p>
+
+                </div>
+            </section>
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
         <!-- sponsors section -->
         <section class="sponsors">
-            <h3 class="section-title">Ours Sponsors</h3>
-            <p class="text-light-gray">Our Story Games Web Games Careers Support My Account</p>
+            <h3 class="section-title"><span class="text-pink">G</span>amer</h3>
+            <p class="text-light-gray footer-title">Our Story Games Web Games Careers Support My Account</p>
             <div class="sponsors-img-container">
-                <img src="images/twitter.jpg"">
+                <img src="images/twitter.jpg">
                 <img src=" images/facebook.jpg" alt="">
                 <img src="images/youtube.png" alt="">
-                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/linkden.jpg" alt="">
                 <img src="images/sponsors/figma.png" alt="">
 
 
